// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render correctly with filterText and empty appElements 1`] = `
<p
  id="filter-empty-message"
>
  Нет элементов списка, которые соответствуют Вашему запросу
</p>
`;

exports[`<Table /> should render correctly with loaded fullData and pageCount = 2 1`] = `
<Fragment>
  <div
    className="table"
    key="table"
  >
    <Connect(TablePanel) />
  </div>
  <div
    className="paginator-container"
    key="paginatorContainer"
  >
    <Connect(Paginator)
      key="paginator"
    />
  </div>
</Fragment>
`;

exports[`<Table /> should render correctly with loaded fullData and pageCount = 2 2`] = `
<Fragment>
  <div
    className="table"
    key="table"
  >
    <Connect(TablePanel) />
  </div>
  <div
    className="paginator-container"
    key="paginatorContainer"
  />
</Fragment>
`;

exports[`<Table /> should render correctly without loaded fullData 1`] = `null`;
